# python-studies

./: pyproject.toml
xlsx-generation/: Dockerfile  docker-compose.yaml  main.py  pyproject.toml  read_and_modify.py  setup.py
